@@ -5,3 +5,4 @@ CHANGES
 ----------------
 
 - Moved locktoken storage to a separate utility, out of a cache.
+- Added events to notify caches about invalidated resources.
